--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 .img {
     text-align: center;
-    border: silver 12px solid;
+    /* border: silver 12px solid; */
 }
 
 .Background1{
